2008-01-12  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am, vala/parser.y, vala/vala.h,
	  vala/valaattributeprocessor.vala, vala/valacodecontext.vala,
	  vala/valacodegenerator.vala, vala/valacodevisitor.vala,
	  vala/valadatatype.vala, vala/valadelegate.vala,
	  vala/valadelegatetype.vala, vala/valainterfacewriter.vala,
	  vala/valanamespace.vala, vala/valanulltype.vala,
	  vala/valasemanticanalyzer.vala, vala/valasignal.vala,
	  vala/valasymbolresolver.vala, gobject/valaccodegenerator.vala,
	  gobject/valaccodegeneratorinvocationexpression.vala,
	  vapigen/valagidlparser.vala: rename Callback to Delegate

2008-01-12  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/: add some missing ellipsis and out
	  parameter metadata for gst_structure and gst_element functions,
	  patch by Andrea Del Signore

	* vapi/gstreamer-0.10.vapi: regenerated

2008-01-12  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala: use separate temp_vars list for
	  lambda expressions to prevent mixup in the C code

2008-01-12  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: restore current_return_type
	  after processing lambda expressions, fixes bug 501586

2008-01-12  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: fix null dereference when trying to
	  access members of a delegate

2008-01-11  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegeneratorclass.vala,
	  gobject/valaccodegeneratorinterface.vala: use parent_instance,
	  parent_class, and parent_iface instead of just parent in C structs

2008-01-11  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/hildon-1/hildon-1.gi, vapi/hildon-1.vapi: regenerated,
	  fixes issue with Hildon.BreadCrumb

2008-01-11  Jürg Billeter  <j@bitron.ch>

	* gobject-introspection/: update from gobject-introspection SVN,
	  fixes bug 505920

	* vapigen/vala-gen-introspect/vala-gen-introspect.in: fix to work
	  with updated gobject-introspection

2008-01-10  Jürg Billeter  <j@bitron.ch>
