@@ -1,6 +1,6 @@
 /* valainvocationexpression.vala
  *
- * Copyright (C) 2006-2007  Jürg Billeter
+ * Copyright (C) 2006-2008  Jürg Billeter
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -37,6 +37,8 @@ public class Vala.InvocationExpression : Expression {
 			_call.parent_node = this;
 		}
 	}
+
+	public CCodeExpression delegate_target { get; set; }
 
 	public Expression! _call;
 	
